--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,44 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>My Weather App</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="home-container">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Enter a City</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>
+          <ion-input
+            [(ngModel)]="city"
+            placeholder="e.g. London"
+          ></ion-input>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <div class="button-container">
+      <ion-button
+        expand="block"
+        color="warning"
+        class="btn-lg"
+        (click)="go()"
+        [disabled]="!city.trim()"
+      >
+        Get Weather
+      </ion-button>
+
+      <ion-button
+        expand="block"
+        color="success"
+        class="btn-lg"
+        (click)="useMyLocation()"
+      >
+        Use My Location
+      </ion-button>
+    </div>
   </div>
 </ion-content>
